Everything before the migrations should be good to go.  Now I'm onto Migrations.

--- a/Liftoff Project v2/Liftoff Project v2.csproj
+++ b/Liftoff Project v2/Liftoff Project v2.csproj
@@ -11,7 +11,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\Movie\" />
+    <Content Update="Views\Movie\Add.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Movie\Index.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
   </ItemGroup>
 
 </Project>
